# dfmJulioos

./: .gitmodules  CMakeLists.txt  README.md
DFM1FilterPlugin/: CMakeLists.txt
DFM1FilterPlugin/Source/: PluginProcessor.cpp
DFM1FilterPlugin/libs/: dfm1.jl
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  dfm1.jl
Source/dfm1/: Project.toml  dfm1.jl
